10-Jan-2020 V0.35 Update dependencies for rcsb.utils.go and rcsb.utils.struct
23-Jan-2020 V0.36 Changes to support pre-beta-v1 schema reorganization with the addition of rcsb_polymer_entity_annotation
27-Jan-2020 V0.37 Add annotation extractor modules and adjustments for some missing features.
29-Jan-2020 V0.38 Update dependencies for GO and Drugbank fixes
30-Jan-2020 V0.39 Update dependencies structure domain utilities
 2-Feb-2020 V0.40 Add test fixtures to measure memory usage, streamline some extractions, suppress some diagnostic reporting
 4-Feb-2020 V0.41 Update dependencies to support split configuration
 6-Feb-2020 V0.42 Address issue with duplicated annotations from multiple reference sequences
 8-Feb-2020 V0.43 Adjust the default chunk size in the workflow interface (set the default to 100)
 8-Feb-2020 V0.44 Expose the reference sequence fetch chunk size in the workflow interface
11-Feb-2020 V0.45 Simplify workflow api and update dependencies
13-Feb-2020 V0.46 Added validation tests to troubleshoot UniProt core loading.  Update dependencies.
16-Feb-2020 V0.47 Add alternative cache strategy for reference sequences.
19-Feb-2020 V0.48 Add Pfam and InterPro Providers and associated annotation
20-Feb-2020 V0.49 Combine missing UniProt accessions if available with other reference sequence data.
26-Feb-2020 V0.50 Standardize case for gene names.
 1-Apr-2020 V0.51 Better handling of incomplete primary gene annotations
 5-Apr-2020 V0.52 Suppress diagnostic logging in ReferenceSequenceCacheProvider()
 8-Apr-2020 V0.53 Adjust error handling in ReferenceSequenceCacheProvider()
 5-May-2020 V0.54 Add PubChem loader and workflow extensions
 9-May-2020 V0.55 Adjust cache management for PubChem refresh
 9-May-2020 V0.56 Log formatting adjustments
17-May-2020 V0.57 Revise the index for PubChem search
18-May-2020 V0.58 Cleanup some pipeline and logging issues.
23-May-2020 V0.59 Add PubChem tracking diagnostics
23-May-2020 V0.60 Adjust multiprocessing configuration